# github-to-jenkins-webhook

./: Cargo.toml  README.org  flake.nix
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  dependabot-auto-merge.yml  release.yml
nix/: derivation.nix  nixos-module.nix
src/: args.rs  datetime_agnostic.rs  error.rs  github_types.rs  main.rs  webhook.rs
