[package]
name = "github-to-jenkins-webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
clap = { version = "4.4", features = ["derive", "env"] }
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
