[package]
name = "github-to-jenkins-webhook"
version = "0.1.0"
edition = "2021"

# See https://doc.rust-lang.org/cargo/reference/profiles.html for more about
# these build profiles.
[profile.dev]
# Prevent 36GB target/debug directories.
debug = false

[profile.release]
debug = false
# Disable in CI using CARGO_INCREMENTAL=0.
incremental = true

[dependencies]
actix-web = "4.4"
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
